...
        }
        if (state is CartLoaded) {
          //var isInCart = state.cart.items.contains(item);
          return TextButton(
            style: TextButton.styleFrom(onSurface: theme.primaryColor),
            onPressed: () => context.read<CartBloc>().add(CartItemAdded(item)),
            child: const Text('ADD'),
          );
        }
        return const Text('cart accident!');
      },
    );
  }
...
}

class _MyAppBar extends StatelessWidget {
  @override
  Widget build(BuildContext context) {
    return SliverAppBar(
      title: Text('Catalog', style: Theme.of(context).textTheme.headline1),
      floating: true,
      actions: [
        IconButton(
          icon: const Icon(Icons.shopping_cart),
          onPressed: () => Navigator.of(context).pushNamed('/cart'),
        ),
...
