...
            child: CircularProgressIndicator(
              valueColor: AlwaysStoppedAnimation<Color>(Colors.white),
            ));
      } else if (state is CartLoaded) {
        if (state.cart.items.isEmpty) {
          return Center(
              child: Text('Nothing in the cart..',
                  style: Theme.of(context)
                      .textTheme
                      .headline1!
                      .copyWith(fontSize: 35)));
        } else {
          return Column(
...
